# CS495-Non-GPU

./: .dockerignore  .gitignore  AUTHORS.md  BITNET_SUMMARY.md  CS495_Capstone_Final_v2.pptx  Dockerfile  FINAL_REPORT.md  Makefile  PLAN.md  QWEN_SUMMARY.md  README.md  REPORT.md  pyproject.toml
patches/: llama-chrono-examples.patch  llama-chrono.patch
results/: accuracy_results.json  accuracy_results_bitnet.json  accuracy_results_gemma_q2.json  accuracy_results_gemma_q4.json  accuracy_results_gemma_q8.json  accuracy_results_qwen.json  accuracy_results_qwen_q2.json  accuracy_results_qwen_q4.json  bitnet_step_metrics.csv  bitnet_thread_sweep.csv  comparison_table.csv  gemma_q2_step_metrics.csv  gemma_q2_thread_sweep.csv  gemma_q4_step_metrics.csv  gemma_q4_thread_sweep.csv  gemma_q8_step_metrics.csv  gemma_q8_thread_sweep.csv  llama_q4_step_metrics.csv  qwen_q2_step_metrics.csv  qwen_q2_thread_sweep.csv  qwen_q4_step_metrics.csv  qwen_q4_thread_sweep.csv  qwen_q8_on_bitnet_fork_step_metrics.csv  qwen_q8_step_metrics.csv  qwen_thread_sweep.csv  step_metrics.csv
results/aws_c7i_flex_large/: bitnet_step_metrics.csv  gemma_q2_step_metrics.csv  gemma_q4_step_metrics.csv  gemma_q8_step_metrics.csv  llama_q4_step_metrics.csv  qwen_q2_step_metrics.csv  qwen_q4_step_metrics.csv  qwen_q8_step_metrics.csv
results/contaminated_2026-06-12/: accuracy_results_qwen_q2.json  accuracy_results_qwen_q4.json
results/linux_docker_x86/: bitnet_step_metrics.csv  (+7 more)
scripts/: compare_runs.py  eval_accuracy.py  measure_marginal_energy.py  metrics_tracker.py  run_lm_eval.py  smoke_test.py
