[tool.poetry]
name = "cs495-non-gpu"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
psutil = "^6.0"
pandas = "^2.2"
matplotlib = "^3.9"
codecarbon = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"